[gd_scene load_steps=29 format=2]

[ext_resource path="res://nc-assets/images/menu.png" type="Texture" id=1]
[ext_resource path="res://free-assets/fonts/Marck_Script/MarckScript-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://free-assets/music/Nostalgic Piano.ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="Animation" id=23]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 150.0
margin_right = 1170.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 1 )
text = "Critic's Choice"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 400.0
margin_top = 610.0
margin_right = 724.0
margin_bottom = 1010.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 324.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 103.0
margin_right = 324.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "SETTINGS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 206.0
margin_right = 324.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 1570, 321.717 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "CREDITS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 309.0
margin_right = 324.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 23 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
